--- a/js/functions/package.json
+++ b/js/functions/package.json
@@ -2,17 +2,16 @@
   "name": "functions",
   "description": "Firebase Functions",
   "dependencies": {
-    "@google-cloud/speech": "^0.5.0",
-    "@google-cloud/storage": "^0.6.1",
-    "@google-cloud/translate": "^0.6.0",
+    "@google-cloud/speech": "^0.10.2",
+    "@google-cloud/storage": "^1.2.1",
+    "@google-cloud/translate": "^1.0.0",
     "ffmpeg.js": "^3.1.9001",
-    "firebase-admin": "^4.1.1",
-    "firebase-functions": "https://storage.googleapis.com/firebase-preview-drop/node/firebase-functions/firebase-functions-preview.latest.tar.gz",
-    "google-auth-library": "^0.9.10",
-    "googleapis": "^15.1.0",
-    "grpc": "^1.0.1",
-    "install": "^0.8.4",
-    "npm": "^4.0.5",
-    "request": "^2.79.0"
+    "firebase-admin": "^5.2.1",
+    "firebase-functions": "^0.6.2",
+    "google-auth-library": "^0.10.0",
+    "googleapis": "^21.3.0",
+    "grpc": "^1.4.1",
+    "npm": "^5.3.0",
+    "request": "^2.81.0"
   }
 }
