--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -20,7 +20,7 @@ android {
     compileSdkVersion 25
     buildToolsVersion "25.0.2"
     defaultConfig {
-        applicationId "com.google.example.babelfire"
+        applicationId "com.google.example.babelfirelive"
         minSdkVersion 22
         targetSdkVersion 25
         versionCode 1
