udpated iOS code to use Firestore

--- a/ios/Podfile
+++ b/ios/Podfile
@@ -21,7 +21,7 @@ target 'babel fire' do
 
   # Pods for babel fire
   pod 'Firebase/Auth'
-  pod 'Firebase/Database'
+  pod 'Firebase/Firestore'
   pod 'Firebase/Storage'
 
   pod 'FirebaseUI/Google'
