--- a/js/functions/package.json
+++ b/js/functions/package.json
@@ -2,16 +2,19 @@
   "name": "functions",
   "description": "Firebase Functions",
   "dependencies": {
+    "@google-cloud/firestore": "^0.8.2",
     "@google-cloud/speech": "^0.10.2",
     "@google-cloud/storage": "^1.2.1",
     "@google-cloud/translate": "^1.0.0",
     "ffmpeg.js": "^3.1.9001",
-    "firebase-admin": "^5.2.1",
-    "firebase-functions": "^0.6.2",
+    "firebase-admin": "^5.4.0",
+    "firebase-functions": "^0.7.0",
     "google-auth-library": "^0.10.0",
     "googleapis": "^21.3.0",
     "grpc": "^1.4.1",
-    "npm": "^5.3.0",
     "request": "^2.81.0"
+  },
+  "devDependencies": {
+    "firebase-tools": "^3.13.1"
   }
 }
