--- a/js/functions/package.json
+++ b/js/functions/package.json
@@ -2,16 +2,17 @@
   "name": "functions",
   "description": "Firebase Functions",
   "dependencies": {
-    "@google-cloud/speech": "^0.10.2",
-    "@google-cloud/storage": "^1.2.1",
-    "@google-cloud/translate": "^1.0.0",
+    "@google-cloud/vision": "^0.15.2",
+    "@google-cloud/speech": "^1.1.0",
+    "@google-cloud/storage": "^1.6.0",
+    "@google-cloud/translate": "^1.1.0",
     "ffmpeg.js": "^3.1.9001",
-    "firebase-admin": "^5.2.1",
-    "firebase-functions": "^0.6.2",
-    "google-auth-library": "^0.10.0",
-    "googleapis": "^21.3.0",
-    "grpc": "^1.4.1",
-    "npm": "^5.3.0",
-    "request": "^2.81.0"
+    "firebase-admin": "^5.9.0",
+    "firebase-functions": "^0.8.1",
+    "google-auth-library": "^1.2.1",
+    "googleapis": "^26.0.1",
+    "grpc": "^1.9.1",
+    "npm": "^5.6.0",
+    "request": "^2.83.0"
   }
 }
